# habit-rs

./: Cargo.toml  Readme.md
docker/: postgres_docker_compose.yml
habit_store/: Cargo.toml
habit_store/migrations/: 20240629231153_create_habits_db.sql  create_db_if_not_exist.sh
habit_store/src/: context.rs  lib.rs
habit_store/src/db/types/: model.rs
