[package]
name = "habit_store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
sqlx = { version = "0.7", features = [ "runtime-tokio", "chrono", "postgres", "sqlite" ] }
thiserror = "1.0.61"

tokio = { version = "1.38.0", features = ["full"] }
tokio-macros = "2.3.0"
